[tool.poetry]
name = "stable-diffusion-xl-gradio-heroku"
version = "0.1.0"
description = ""
authors = ["I574161 <yu.xuan.lee@sap.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^4.32.1"
huggingface-hub = "^0.23.2"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
